[calendar] - fixed 'select' callback for single select - fixed $xdid().value returning 0 for single select
[general]
- added spaces between names in Version and changed '&' to 'and'

[dcxdocs]
- added version history (its a big fkn change log!)
- increased text font size by 1, it was too small to read!
- moved part of image /xdid -o description to notes
- moved change log below callback section on index page
- updated aliases on index page to include /xdock, /xtray, /xstatusbar and /xstreeview
- renamed VALUE to PARAM on index page
- updated listview 'selected' and 'deselected' callback to state fullrow style causes subitem to be 0

git-svn-id: http://dcx.googlecode.com/svn@762 17a06da3-8c20-fa79-550f-e9588e724b77

--- a/docs_new/doc/dcx.css
+++ b/docs_new/doc/dcx.css
@@ -15,7 +15,7 @@
 
 
 body,div,td,th {
-	font-size: 8pt;
+	font-size: 9pt;
 	font-family: Geneva, Arial, Helvetica, sans-serif;
 	color: #000000;
 	cursor: default;
